--- a/templates/vault-deployment.yaml
+++ b/templates/vault-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.vaultApplicationName }}
-  namespace: {{ .Values.devnamespace }}
+  namespace: {{ .Values.toolingnamespace }}
 spec:
   selector:
     matchLabels:
