--- a/templates/vault-service.yaml
+++ b/templates/vault-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.vaultservice }}
-  namespace: {{ .Values.devnamespace }}
+  namespace: {{ .Values.toolingnamespace }}
 spec:
   selector:
     app: {{ .Values.vaultApplicationName }}
